# qrcode_det_ros1_pkg

./: .gitignore  CMakeLists.txt  Readme.md  fsrcnn.onnx  package.xml
include/: fsrcnn_module.h
launch/: qrdecode_csi.launch  qrdecode_usb.launch
src/: control_node.cc  fsrcnn_module.cc  qr_decode.cc  qr_decode.h
